--- a/404.html
+++ b/404.html
@@ -50,12 +50,11 @@
         <link rel="stylesheet" href="/css/font.css?v=836237074">
         <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CnnAK7LZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BzTd7Mol.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CQ9w2Z_t.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.3IB_Ftey.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.5nauvt-X.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BR5gSEEd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.DTcgnohC.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D1MKgk8M.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D1LV_hOV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Bg-TUWyg.js">
 	</head>
@@ -63,15 +62,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_xlfifs = {
+					__sveltekit_1vbzj3z = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CnnAK7LZ.js"),
-						import("/_app/immutable/entry/app.D1MKgk8M.js")
+						import("/_app/immutable/entry/start.CQ9w2Z_t.js"),
+						import("/_app/immutable/entry/app.D1LV_hOV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
