--- a/404.html
+++ b/404.html
@@ -50,11 +50,11 @@
         <link rel="stylesheet" href="/css/font.css?v=836237074">
         <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CyV6CTGu.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BiQdyWnG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.SIz_QTGm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.u16KwuBy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DvBGoWJB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CmrIBcBm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CKwdToMw.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B0uKDKfZ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DefMRAVk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DubC_vjY.js">
@@ -63,15 +63,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_n7txg5 = {
+					__sveltekit_u6lb0f = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CyV6CTGu.js"),
-						import("/_app/immutable/entry/app.CKwdToMw.js")
+						import("/_app/immutable/entry/start.SIz_QTGm.js"),
+						import("/_app/immutable/entry/app.B0uKDKfZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
