--- a/reveal.html
+++ b/reveal.html
@@ -51,7 +51,7 @@
         <link rel="stylesheet" href="./css/main.css?v=471693858">
         
 		<link href="./_app/immutable/assets/2.NhL6nyhh.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/app.D_lljHjE.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/app.CwWqYNRe.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Header.BzW1f_EI.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Pulse.CVk3efjE.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/5.Bq1Tcu4F.css" rel="stylesheet">
@@ -64,22 +64,22 @@
 		<link rel="preload" as="font" type="font/ttf" href="./_app/immutable/assets/source-sans-pro-semibold.J0UDcmCq.ttf" crossorigin>
 		<link rel="preload" as="font" type="font/woff" href="./_app/immutable/assets/source-sans-pro-semibolditalic.DSkHRpvW.woff" crossorigin>
 		<link rel="preload" as="font" type="font/ttf" href="./_app/immutable/assets/source-sans-pro-semibolditalic.BHQoOnJ8.ttf" crossorigin>
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CyV6CTGu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BiQdyWnG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.SIz_QTGm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.u16KwuBy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DvBGoWJB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CmrIBcBm.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CKwdToMw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B0uKDKfZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DefMRAVk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DubC_vjY.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DosBymop.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BO1r1x3w.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Header.Dwalu7-D.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Cq2i3ko8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DL3j8XSy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Header.Dm1UWfUt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BhHiU3xn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Pulse.svelte_svelte_type_style_lang.BM2Bm777.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.C2ze8Lu7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.CiHo8Oo4.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.BgSHbKny.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.CP4V2uni.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Contact.IF27A_Nl.js"><!-- HEAD_svelte-18q6al3_START --><script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js" integrity="sha512-YcsIPGdhPK4P/uRW6/sruonlYj+Q7UHWeKfTAkBW+g83NKM+jMJFJ4iAPfSnVp7BKD4dKMHmVSvICUbE/V1sSw==" crossorigin="anonymous" referrerpolicy="no-referrer" data-svelte-h="svelte-1t1z7ya"></script><!-- HEAD_svelte-18q6al3_END -->
 	</head>
@@ -88,7 +88,7 @@
 			
 			<script>
 				{
-					__sveltekit_n7txg5 = {
+					__sveltekit_u6lb0f = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -97,8 +97,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CyV6CTGu.js"),
-						import("./_app/immutable/entry/app.CKwdToMw.js")
+						import("./_app/immutable/entry/start.SIz_QTGm.js"),
+						import("./_app/immutable/entry/app.B0uKDKfZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 5],
