--- a/reveal.html
+++ b/reveal.html
@@ -64,22 +64,22 @@
 		<link rel="preload" as="font" type="font/ttf" href="./_app/immutable/assets/source-sans-pro-semibold.J0UDcmCq.ttf" crossorigin>
 		<link rel="preload" as="font" type="font/woff" href="./_app/immutable/assets/source-sans-pro-semibolditalic.DSkHRpvW.woff" crossorigin>
 		<link rel="preload" as="font" type="font/ttf" href="./_app/immutable/assets/source-sans-pro-semibolditalic.BHQoOnJ8.ttf" crossorigin>
-		<link rel="modulepreload" href="./_app/immutable/entry/start.SIz_QTGm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.u16KwuBy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BKDHHiXP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CKf1hqQO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DvBGoWJB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CmrIBcBm.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B0uKDKfZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dq2NYz2l.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DefMRAVk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DubC_vjY.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DosBymop.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DL3j8XSy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Header.Dm1UWfUt.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BhHiU3xn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Kayu8Y1o.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Header.QMCEIPuZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CGI0o3DH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Pulse.svelte_svelte_type_style_lang.BM2Bm777.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.BgSHbKny.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.CP4V2uni.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.COOgdXVF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.D3-fU2-x.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Contact.IF27A_Nl.js"><!-- HEAD_svelte-18q6al3_START --><script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js" integrity="sha512-YcsIPGdhPK4P/uRW6/sruonlYj+Q7UHWeKfTAkBW+g83NKM+jMJFJ4iAPfSnVp7BKD4dKMHmVSvICUbE/V1sSw==" crossorigin="anonymous" referrerpolicy="no-referrer" data-svelte-h="svelte-1t1z7ya"></script><!-- HEAD_svelte-18q6al3_END -->
 	</head>
@@ -88,7 +88,7 @@
 			
 			<script>
 				{
-					__sveltekit_u6lb0f = {
+					__sveltekit_h8j5sm = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -97,8 +97,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.SIz_QTGm.js"),
-						import("./_app/immutable/entry/app.B0uKDKfZ.js")
+						import("./_app/immutable/entry/start.BKDHHiXP.js"),
+						import("./_app/immutable/entry/app.Dq2NYz2l.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 5],
