--- a/404.html
+++ b/404.html
@@ -50,27 +50,28 @@
         <link rel="stylesheet" href="/css/font.css?v=836237074">
         <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CTVQbeG3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BrZqGIKx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.Bv9kgQnj.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D9K4N2l6.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.6ZnmQ6Uy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DbVVa5_5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.B4fiJgcb.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BedjGWlg.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.OPbzfsEr.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DefMRAVk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.D85UXi4P.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BcrjRjFX.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_67xpip = {
+					__sveltekit_1sj8y1r = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CTVQbeG3.js"),
-						import("/_app/immutable/entry/app.D9K4N2l6.js")
+						import("/_app/immutable/entry/start.6ZnmQ6Uy.js"),
+						import("/_app/immutable/entry/app.OPbzfsEr.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
