--- a/404.html
+++ b/404.html
@@ -50,11 +50,11 @@
         <link rel="stylesheet" href="/css/font.css?v=836237074">
         <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B60d4SE7.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CQDOp_-W.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C6WIXSHj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CKaahsz7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.Bs-Ydizp.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cjnls_wo.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.xByIHEww.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CUdFgQGZ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DefMRAVk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.cVSpFuol.js">
@@ -63,15 +63,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_mxyvar = {
+					__sveltekit_11759fd = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B60d4SE7.js"),
-						import("/_app/immutable/entry/app.xByIHEww.js")
+						import("/_app/immutable/entry/start.C6WIXSHj.js"),
+						import("/_app/immutable/entry/app.CUdFgQGZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
