--- a/404.html
+++ b/404.html
@@ -50,11 +50,11 @@
         <link rel="stylesheet" href="/css/font.css?v=836237074">
         <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CcviJRPl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BINiaIa3.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BM-aURNj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BFmyW3em.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.Bs-Ydizp.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cjnls_wo.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CJ354aba.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D35B7kMR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DefMRAVk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.cVSpFuol.js">
@@ -63,15 +63,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1j2l82m = {
+					__sveltekit_1n3hiwg = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CcviJRPl.js"),
-						import("/_app/immutable/entry/app.CJ354aba.js")
+						import("/_app/immutable/entry/start.BM-aURNj.js"),
+						import("/_app/immutable/entry/app.D35B7kMR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
