--- a/reveal.html
+++ b/reveal.html
@@ -64,22 +64,22 @@
 		<link rel="preload" as="font" type="font/ttf" href="./_app/immutable/assets/source-sans-pro-semibold.J0UDcmCq.ttf" crossorigin>
 		<link rel="preload" as="font" type="font/woff" href="./_app/immutable/assets/source-sans-pro-semibolditalic.DSkHRpvW.woff" crossorigin>
 		<link rel="preload" as="font" type="font/ttf" href="./_app/immutable/assets/source-sans-pro-semibolditalic.BHQoOnJ8.ttf" crossorigin>
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CcviJRPl.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BINiaIa3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BM-aURNj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BFmyW3em.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Bs-Ydizp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cjnls_wo.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CJ354aba.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D35B7kMR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DefMRAVk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.cVSpFuol.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.S2_op_zh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DIrm3frW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Header.DNkdODhW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bw-PU4NP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D7lylL-o.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Header.CDetsu3e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.tLXzD_Or.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Pulse.svelte_svelte_type_style_lang.CBTWAQsO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.BGOw7Hbi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.CtA1kYe5.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.BTEXZABm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.D1W5m4Vk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/create.D2sHZ0Zb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Contact.Cz91poqr.js"><!-- HEAD_svelte-18q6al3_START --><script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js" integrity="sha512-YcsIPGdhPK4P/uRW6/sruonlYj+Q7UHWeKfTAkBW+g83NKM+jMJFJ4iAPfSnVp7BKD4dKMHmVSvICUbE/V1sSw==" crossorigin="anonymous" referrerpolicy="no-referrer" data-svelte-h="svelte-1t1z7ya"></script><!-- HEAD_svelte-18q6al3_END -->
@@ -89,7 +89,7 @@
 			
 			<script>
 				{
-					__sveltekit_1j2l82m = {
+					__sveltekit_1n3hiwg = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -98,8 +98,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CcviJRPl.js"),
-						import("./_app/immutable/entry/app.CJ354aba.js")
+						import("./_app/immutable/entry/start.BM-aURNj.js"),
+						import("./_app/immutable/entry/app.D35B7kMR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 5],
