--- a/404.html
+++ b/404.html
@@ -50,10 +50,10 @@
         <link rel="stylesheet" href="/css/font.css?v=489812820">
         <link rel="stylesheet" href="/css/main.css?v=-938513177">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D1CLaJEH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/8AxHceeI.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.MS3IxWo1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/NnVZWQ8E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DYL6wxSU.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DaZGDX4x.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DHgbhz77.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C1FmrZbK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DefMRAVk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C-HYWZlc.js">
@@ -62,15 +62,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1hsx6fs = {
+					__sveltekit_1f39l1v = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D1CLaJEH.js"),
-						import("/_app/immutable/entry/app.DaZGDX4x.js")
+						import("/_app/immutable/entry/start.MS3IxWo1.js"),
+						import("/_app/immutable/entry/app.DHgbhz77.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
