--- a/404.html
+++ b/404.html
@@ -42,35 +42,36 @@
         <link rel="preload" href="/font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/font/Zenless_2.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/font/Zenless_3.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="preload" as="style" href="/css/font.css?v=489812820">
-        <link rel="preload" as="style" href="/css/main.css?v=-938513177">
+        <link rel="preload" as="style" href="/css/font.css?v=836237074">
+        <link rel="preload" as="style" href="/css/main.css?v=471693858">
         <!-- <link rel="preload" href="/img/ui/stellar-bg/mask-6f.webp" as="image" type="image/webp" crossorigin="anonymous">
         <link rel="preload" href="/img/ui/stellar-bg/stellar-stellar.webp" as="image" type="image/webp" crossorigin="anonymous"> -->
         <!-- CSS -->
-        <link rel="stylesheet" href="/css/font.css?v=489812820">
-        <link rel="stylesheet" href="/css/main.css?v=-938513177">
+        <link rel="stylesheet" href="/css/font.css?v=836237074">
+        <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DAdEC5YM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bd1e_FC4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DYL6wxSU.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DxM2VXzR.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DCdTKTmR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/I2qYGSzX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/xk3pEXYh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/py_jMq1I.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D169HJ4B.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C1FmrZbK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DefMRAVk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C-HYWZlc.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/IHki7fMi.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1n3dg7t = {
+					__sveltekit_k70th9 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DAdEC5YM.js"),
-						import("/_app/immutable/entry/app.DxM2VXzR.js")
+						import("/_app/immutable/entry/start.DCdTKTmR.js"),
+						import("/_app/immutable/entry/app.D169HJ4B.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
